// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarItem should match a snapshot - Number 1`] = `
<DocumentFragment>
  <div
    class="toolbar-item-container"
  >
    <label
      class="el-label"
    />
    <input
      class="el-input"
      type="number"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`ToolbarItem should match a snapshot - Radio 1`] = `
<DocumentFragment>
  <div
    class="toolbar-item-container"
  >
    <label
      class="el-label"
    />
  </div>
</DocumentFragment>
`;

exports[`ToolbarItem should match a snapshot - Select 1`] = `
<DocumentFragment>
  <div
    class="toolbar-item-container"
  >
    <label
      class="el-label"
    />
    <select
      class="app-builder-select el-select"
    />
  </div>
</DocumentFragment>
`;

exports[`ToolbarItem should match a snapshot - Slider 1`] = `<DocumentFragment />`;

exports[`ToolbarItem should match a snapshot - Text 1`] = `
<DocumentFragment>
  <div
    class="toolbar-item-container"
  >
    <label
      class="el-label"
    />
    <input
      class="el-input"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;
